cmake_minimum_required(VERSION 3.12)
project(week2 C)

set(CMAKE_C_STANDARD 99)

add_executable(week2 program_4.c program_5_discard.c program_5.c program_6.c program_7.c program_8.c function_3.c program_9.c program_9_discard.cpp program_10_discard.c program_10.c program_11.cpp program_11.cpp program_12.c program_13.c)